# kira-biodata-manager

./: .gitignore  CLI.md  Cargo.toml  README.md
docs/: FORMATS.md  PIPELINE.md  README.md
src/: app.rs  config.rs  domain.rs  error.rs  fs_util.rs  geo.rs  knowledge.rs  lib.rs  ncbi.rs  output.rs  rcsb.rs  srr.rs  store.rs  tui.rs  uniprot.rs
src/providers/: doi.rs
tests/: app.rs  config.rs  doi_integration.rs  doi_regex.rs  domain.rs  knowledge.rs  ncbi.rs  store.rs  uniprot.rs
tests/fixtures/: uniprot_P69905.json
