[package]
name = "kira-biodata-manager"
description = "Reproducible bio-data manager with a project-local store and a shared global cache. kira-bm it's like npm/cargo/pip for bioinformatics."
version = "0.1.2"
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-biodata-manager"
keywords = [
    "bioinformatics",
    "genomics",
    "proteomics",
    "dna",
    "pdb"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "science::bioinformatics::proteomics",
    "command-line-utilities"
]

[[bin]]
name = "kira-bm"
path = "src/bin/kira_bm.rs"

[dependencies]
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.29"
directories = "6.0"
flate2 = "1.1"
miette = { version = "7.6", features = ["fancy"] }
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
zip = "7.3.0-pre1"

[dev-dependencies]
assert_matches = "1.5"
